--- a/conf/application.conf
+++ b/conf/application.conf
@@ -63,7 +63,7 @@ http.port=8080
 # jpda.port=8000
 #
 # Java source level => 1.6, 1.7 or 1.8 (experimental)
-# java.source=1.6
+java.source=1.7
 
 # Log level
 # ~~~~~
