--- a/conf/application.conf
+++ b/conf/application.conf
@@ -82,7 +82,7 @@ java.source=1.7
 # To quickly set up a development database, use either:
 #   - mem : for a transient in memory database (H2 in memory)
 #   - fs  : for a simple file written database (H2 file stored)
-# db.default=mem
+db.default=fs
 #
 # To connect to a local MySQL5 database, use:
 # db.default=mysql://user:pwd@host/database
