Update project name.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,6 +1,6 @@
 # This is the main configuration file for the application.
 # ~~~~~
-application.name=itrc.kb
+application.name=itrc.cskb
 
 # Application mode
 # ~~~~~
